<resources>
    <string name="app_name">CreatSMS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sms_message_contect">Message Body</string>
    <string name="smes_message_contect_tip">Pls input any, this area should not null</string>
    <string name="sms_message_number">Phone Number</string>
    <string name="sms_phone_number_default">13800138000</string>
    <string name="sms_phone_number_tip">Pls input any number</string>
    <string name="apply_permission_message">This APP need apply for Read and Write Message permission</string>
    <string name="adding_sms">Add Sms...</string>
    <string name="title_activity_settings">Settings</string>
    <string name="language_switch">Language Switch</string>
    <string name="navigation_about">About</string>
    <string name="navigation_share">Share</string>
    <string name="navigation_update">Update</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="settings_select_time">Select Time</string>
    <string name="settings_select_time_detail">Select Time that message creat time</string>
    <string name="settings_select_count">You Set Creat Message Count is %s</string>
    <string name="settings_sms_count">Message Count</string>
    <string name="settings_sms_count_detail">The count is what you want to creat</string>

    <string name="public_setting">Public Settings</string>
    <string name="nav_setting_feedback">Feedback</string>

    <string name="message_count_pop">Pls input Message Count</string>


    <string name="version_name"> V </string>
    <string name="can_not_find_version_name"> </string>
    <string name="sent_to"> via to</string>
    <string name="qq_app_check">You Device not install QQ, Pls download from AppStore and try again.</string>


    <string name="network_setting">Network Settings</string>
    <string name="network_notwork">Network is disable,Setting it now?</string>
    <string name="menu_canncel">Cancel</string>
    <string name="title_activity_my_web_view">MyWebView</string>


    <string name="btn_ok">OK</string>
    <string name="warning">Warning</string>
    <string name="update_new_verision">New Version</string>
    <string name="update_now">Update Now</string>


    <string name="download_complete_tip_to_install">Complete downloaded</string>
    <string name="download_complete">Complete downloaded </string>
    <string name="error_bad_network">Network error</string>
    <string name="error_url_empty">download url is null</string>
    <string name="error_sdcard_not_available">SD Card is not useable</string>
    <string name="error_create_faild">Creat file error</string>
    <string name="error_http_404">download url error</string>
    <string name="download_faild">download Fail!</string>
</resources>
